feat(api): create new bucket for each dataset
There is a check now to ensure that there is enough space available for
the dataset. If the bucket cannot be created, the upload will be
rejected.
Uploads need to be aborted specifically in order to free the reserved
space of a bucket.
