# backend/api/src/openapi_server/models/abort_dataset_upload_resp.py
@@ -20,23 +20,20 @@ import json
 
 
 
-from pydantic import BaseModel, ConfigDict, StrictBool, StrictStr
+from pydantic import BaseModel, ConfigDict, StrictStr
 from typing import Any, ClassVar, Dict, List
 try:
     from typing import Self
 except ImportError:
     from typing_extensions import Self
 
-class FinalizeDatasetUploadBody(BaseModel):
+class AbortDatasetUploadResp(BaseModel):
     """
-    FinalizeDatasetUploadBody
+    AbortDatasetUploadResp
     """ # noqa: E501
     dataset_id: StrictStr
-    create_archiving_job: StrictBool
-    owner_group: StrictStr
-    owner_user: StrictStr
-    contact_email: StrictStr
-    __properties: ClassVar[List[str]] = ["dataset_id", "create_archiving_job", "owner_group", "owner_user", "contact_email"]
+    message: StrictStr
+    __properties: ClassVar[List[str]] = ["dataset_id", "message"]
 
     model_config = {
         "populate_by_name": True,
@@ -56,7 +53,7 @@ class FinalizeDatasetUploadBody(BaseModel):
 
     @classmethod
     def from_json(cls, json_str: str) -> Self:
-        """Create an instance of FinalizeDatasetUploadBody from a JSON string"""
+        """Create an instance of AbortDatasetUploadResp from a JSON string"""
         return cls.from_dict(json.loads(json_str))
 
     def to_dict(self) -> Dict[str, Any]:
@@ -79,7 +76,7 @@ class FinalizeDatasetUploadBody(BaseModel):
 
     @classmethod
     def from_dict(cls, obj: Dict) -> Self:
-        """Create an instance of FinalizeDatasetUploadBody from a dict"""
+        """Create an instance of AbortDatasetUploadResp from a dict"""
         if obj is None:
             return None
 
@@ -88,10 +85,7 @@ class FinalizeDatasetUploadBody(BaseModel):
 
         _obj = cls.model_validate({
             "dataset_id": obj.get("dataset_id"),
-            "create_archiving_job": obj.get("create_archiving_job"),
-            "owner_group": obj.get("owner_group"),
-            "owner_user": obj.get("owner_user"),
-            "contact_email": obj.get("contact_email")
+            "message": obj.get("message")
         })
         return _obj
 
